infra/k8s/prod/ingress-srv.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
    - host: dev.ryan-schachte.com
      http:
        paths:
          - path: /posts/create
            backend:
              serviceName: posts-srv
              servicePort: 4000
          - path: /posts/?(.*)/comments
            backend:
              serviceName: comments-srv
              servicePort: 4001
          - path: /posts
            backend:
              serviceName: posts-srv
              servicePort: 4000
          - path: /
            backend:
              serviceName: client-srv
              servicePort: 3000
